Suspected fix for #3: Bottom bar overlapping lower battlefield in Safari, capturing / preventing clicks triggering helicopter rotation.

--- a/css/aa.css
+++ b/css/aa.css
@@ -163,10 +163,11 @@ body.is_safari:not(.is-mobile).game-paused #game-paused {
 
 body.is_safari:not(.is-mobile) #help {
   font-size: 2rem;
-  margin-right: 0.25em;
   top: 1px;
+  margin-right: 0.25em;
+  margin-right: 8px;
   transform: scale3d(0.25, 0.25, 1);
-  transform-origin: 100% 100%;
+  transform-origin: 100% 0;
 }
 
 body.is_safari:not(.is-mobile) #player-status-bar,
@@ -720,7 +721,7 @@ body.is-mobile #funds-count {
 #queue {
   /* collapse whitespace */
   font-size: 0;
-  left: 4px;
+  left: 6px;
   position: absolute;
   top: 1px;
   vertical-align: top;
@@ -728,8 +729,8 @@ body.is-mobile #funds-count {
 }
 
 body.is_safari:not(.is-mobile) #queue {
-  /* WTF positioning */
-  top: 31px;
+  /* zoom shenanigans */
+  top: 2px;
 }
 
 #queue .progress {
@@ -2941,15 +2942,15 @@ body.is_safari .cornholio .sub-sprite {
 }
 
 #bottom {
-  bottom: 0;
+  position: absolute;
+  width: 100%;
+  height: 18px;
+  bottom: -25px;
   box-sizing: border-box;
   color: #666;
   font-size: 0.65em;
   left: 0;
-  margin-bottom: -2.35em;
   padding: 0;
-  position: absolute;
-  width: 100%;
 }
 
 .sprite.flame {
@@ -5134,14 +5135,13 @@ body.is_safari:not(.is-mobile) #lights {
 }
 
 #message-box {
-  bottom: 0;
-  display: none;
-  height: 13px;
-  left: 25%;
-  margin-bottom: -2px;
   position: absolute;
-  text-align: center;
+  top: -1px;
+  left: 25%;
+  display: none;
   width: 50%;
+  height: 14px;
+  text-align: center;
   z-index: 2;
 }
 
